--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,11 @@ chrono = "0.4"
 failure = "0.1.7"
 futures-core = "0.3.4"
 futures-util = "0.3.4"
-matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk" }
+matrix-sdk = { path = "./matrix-rust-sdk" }
 ruma-api = "0.14.0"
+ruma-client-api = { version = "0.6.0", git = "https://github.com/matrix-org/ruma-client-api/" }
 ruma-events = "0.17.0"
+ruma-identifiers = "0.14.1"
 serde = { version = "1.0.105", features = ["derive"] }
 serde_json = "1.0.48"
 termion = "1.5.5"
