--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,12 +19,13 @@ failure = "0.1.7"
 futures-core = "0.3.4"
 futures-util = "0.3.4"
 lazy_static = "1.4.0"
-matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk/", branch = "event-emitter" }
+# matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk/", branch = "ev-emitter" }
+matrix-sdk = { path = "../__forks__/matrix-rust-sdk" }
 
 serde = { version = "1.0.105", features = ["derive"] }
 serde_json = "1.0.48"
 termion = "1.5.5"
-tokio = { version = "0.2.13", features = ["macros", "rt-threaded"] }
+tokio = { version = "0.2.13", features = ["macros", "rt-threaded", "sync"] }
 tui = "0.8.0"
 url = "2.1.1"
 
