how to use raw strings in tui

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,11 +22,25 @@ lazy_static = "1.4.0"
 # matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk/", branch = "ev-emitter" }
 matrix-sdk = { path = "../__forks__/matrix-rust-sdk" }
 
+mdcat = "0.15"
 serde = { version = "1.0.105", features = ["derive"] }
 serde_json = "1.0.48"
 termion = "1.5.5"
 tokio = { version = "0.2.13", features = ["macros", "rt-threaded", "sync"] }
+# tui = { path = "../__forks__/tui-rs" }
 tui = "0.8.0"
 url = "2.1.1"
 
 crossbeam-channel = "0.4.2"
+
+[dependencies.pulldown-cmark]
+version = "^0.7"
+default-features = false
+features = ['simd']
+
+[dependencies.syntect]
+# onig rust fails to build w/o clang currently so pin syntect,
+# see <https://github.com/rust-onig/rust-onig/issues/109> and GH-90
+version = "^3, <3.2"
+default-features = false
+features = ["parsing", "assets", "dump-load"]
