use tui master, use matrix-sdk master

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@ failure = "0.1.7"
 futures-core = "0.3.4"
 futures-util = "0.3.4"
 lazy_static = "1.4.0"
-# matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk/", branch = "ev-emitter" }
-matrix-sdk = { path = "../__forks__/matrix-rust-sdk" }
+matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk/" }
+# matrix-sdk = { path = "../__forks__/matrix-rust-sdk" }
 
 mdcat = "0.15"
 serde = { version = "1.0.105", features = ["derive"] }
@@ -28,7 +28,9 @@ serde_json = "1.0.48"
 termion = "1.5.5"
 tokio = { version = "0.2.13", features = ["macros", "rt-threaded", "sync"] }
 # tui = { path = "../__forks__/tui-rs" }
-tui = "0.8.0"
+tui = { git = "https://github.com/fdehau/tui-rs/" }
+# tui = "0.8.0"
+unicode-width = "0.1.7"
 url = "2.1.1"
 
 crossbeam-channel = "0.4.2"
