--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,14 @@ exclude = [ "resources" ]
 async-trait = "0.1.27"
 anyhow = "1.0.27"
 chrono = "0.4"
+comrak = "0.7.0"
+either = "1.5.3"
 failure = "0.1.7"
 futures-core = "0.3.4"
 futures-util = "0.3.4"
 lazy_static = "1.4.0"
-matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk/" }
-# matrix-sdk = { path = "../__forks__/matrix-rust-sdk" }
-
+# matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk/" }
+matrix-sdk = { path = "../__forks__/matrix-rust-sdk" }
 mdcat = "0.15"
 serde = { version = "1.0.105", features = ["derive"] }
 serde_json = "1.0.48"
@@ -31,6 +32,7 @@ tokio = { version = "0.2.13", features = ["macros", "rt-threaded", "sync"] }
 tui = { git = "https://github.com/fdehau/tui-rs/" }
 # tui = "0.8.0"
 unicode-width = "0.1.7"
+unicode-segmentation = "1.6.0"
 url = "2.1.1"
 
 crossbeam-channel = "0.4.2"
