--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ lazy_static = "1.4.0"
 # matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk/" }
 matrix-sdk = { path = "../__forks__/matrix-rust-sdk" }
 mdcat = "0.15"
+muncher = "0.6.0"
+regex = "1.3.6"
 serde = { version = "1.0.105", features = ["derive"] }
 serde_json = "1.0.48"
 termion = "1.5.5"
