--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ tui = { git = "https://github.com/fdehau/tui-rs/" }
 unicode-width = "0.1.7"
 unicode-segmentation = "1.6.0"
 url = "2.1.1"
-
+itertools = "0.9.0"
 crossbeam-channel = "0.4.2"
 
 [dependencies.pulldown-cmark]
