--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,13 @@ async-trait = "0.1.27"
 anyhow = "1.0.27"
 chrono = "0.4"
 comrak = "0.7.0"
+crossbeam-channel = "0.4.2"
 either = "1.5.3"
 failure = "0.1.7"
 futures-core = "0.3.4"
 futures-util = "0.3.4"
+itertools = "0.9.0"
+js_int = "0.1.4"
 lazy_static = "1.4.0"
 # matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk/" }
 matrix-sdk = { path = "../__forks__/matrix-rust-sdk" }
@@ -36,8 +39,6 @@ tui = { git = "https://github.com/fdehau/tui-rs/" }
 unicode-width = "0.1.7"
 unicode-segmentation = "1.6.0"
 url = "2.1.1"
-itertools = "0.9.0"
-crossbeam-channel = "0.4.2"
 
 [dependencies.pulldown-cmark]
 version = "^0.7"
