--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,8 @@ itertools = "0.9.0"
 js_int = "0.1.4"
 lazy_static = "1.4.0"
 # matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk/" }
-matrix-sdk = { path = "../__forks__/matrix-rust-sdk" }
+matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk/", branch = "rumatui" }
+# matrix-sdk = { path = "../__forks__/matrix-rust-sdk" }
 mdcat = "0.15"
 muncher = "0.6.0"
 regex = "1.3.6"
@@ -34,8 +35,8 @@ serde_json = "1.0.48"
 termion = "1.5.5"
 tokio = { version = "0.2.13", features = ["macros", "rt-threaded", "sync"] }
 # tui = { path = "../__forks__/tui-rs" }
-tui = { git = "https://github.com/fdehau/tui-rs/" }
-# tui = "0.8.0"
+# tui = { git = "https://github.com/fdehau/tui-rs/" }
+tui = { git = "https://github.com/DevinR528/tui-rs/", branch = "tail-scroll" }
 unicode-width = "0.1.7"
 unicode-segmentation = "1.6.0"
 url = "2.1.1"
