--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,8 @@ itertools = "0.9.0"
 js_int = "0.1.4"
 lazy_static = "1.4.0"
 # matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk/" }
-matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk/", branch = "bot-example" }
-# matrix-sdk = { path = "../__forks__/matrix-rust-sdk" }
+# matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk/", branch = "master" }
+matrix-sdk = { path = "../__forks__/matrix-rust-sdk" }
 mdcat = "0.15"
 muncher = "0.6.0"
 regex = "1.3.6"
