--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ anyhow = "1.0.28"
 chrono = "0.4"
 comrak = "0.7.0"
 crossbeam-channel = "0.4.2"
+dirs = "2.0.2"
 either = "1.5.3"
 failure = "0.1.7"
 futures-core = "0.3.4"
@@ -25,7 +26,7 @@ itertools = "0.9.0"
 js_int = "0.1.4"
 lazy_static = "1.4.0"
 # matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk/" }
-matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk/", branch = "tombstone" }
+matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk/", branch = "rumatui" }
 # matrix-sdk = { path = "../__forks__/matrix-rust-sdk" }
 mdcat = "0.15"
 muncher = "0.6.0"
