--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,11 +26,15 @@ itertools = "0.9.0"
 js_int = "0.1.4"
 lazy_static = "1.4.0"
 # matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk/" }
-# matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk/", branch = "rumatui" }
-matrix-sdk = { path = "../__forks__/matrix-rust-sdk" }
+matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk/", branch = "rumatui" }
+# matrix-sdk = { path = "../__forks__/matrix-rust-sdk/matrix_sdk" }
 mdcat = "0.15"
 muncher = "0.6.0"
 regex = "1.3.6"
+
+# turn on rand feature to generate EventId's
+ruma-identifiers = { version = "*", features = ["rand"] }
+
 serde = { version = "1.0.105", features = ["derive"] }
 serde_json = "1.0.48"
 termion = "1.5.5"
