--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,8 @@ futures-util = "0.3.4"
 itertools = "0.9.0"
 js_int = "0.1.5"
 lazy_static = "1.4.0"
-# matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk/" }
-matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk/", branch = "rumatui" }
+matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk/", features = ["messages"]}
+# matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk/", branch = "rumatui" }
 # matrix-sdk = { path = "../__forks__/matrix-rust-sdk/matrix_sdk" }
 mdcat = "0.15"
 muncher = "0.6.0"
@@ -34,6 +34,7 @@ regex = "1.3.7"
 
 # turn on rand feature to generate EventId's
 ruma-identifiers = { version = "*", features = ["rand"] }
+ruma-client-api = "0.8.0"
 
 serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.52"
