--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,9 @@ futures-util = "0.3.4"
 itertools = "0.9.0"
 js_int = "0.1.5"
 lazy_static = "1.4.0"
-matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk/", features = ["messages"]}
+# matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk/", features = ["messages"]}
 # matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk/", branch = "rumatui", features = ["messages"] }
-# matrix-sdk = { path = "../__forks__/matrix-rust-sdk/matrix_sdk", features = ["messages"] }
+matrix-sdk = { path = "../__forks__/matrix-rust-sdk/matrix_sdk", features = ["messages"] }
 mdcat = "0.15"
 muncher = "0.6.0"
 regex = "1.3.7"
