--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,11 @@ futures-util = "0.3.4"
 itertools = "0.9.0"
 js_int = "0.1.5"
 lazy_static = "1.4.0"
-# matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk/", features = ["messages"] }
-matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk", branch = "rumatui", features = ["messages"] }
-mdcat = "0.15"
+
+matrix-sdk = "0.1.0"
+matrix-sdk-base = { version = "0.1.0", features = ["messages"] }
+
+mdcat = "0.17.1"
 muncher = "0.6.0"
 regex = "1.3.7"
 
@@ -39,8 +41,10 @@ serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.52"
 termion = "1.5.5"
 tokio = { version = "0.2.20", features = ["macros", "rt-threaded", "sync"] }
-# tui = { git = "https://github.com/fdehau/tui-rs/" }
-tui = { git = "https://github.com/DevinR528/tui-rs/", branch = "tail-scroll" }
+
+# crates.io published fork of tui
+rumatui-tui = "0.8.0"
+
 unicode-width = "0.1.7"
 unicode-segmentation = "1.6.0"
 url = "2.1.1"
@@ -54,6 +58,9 @@ features = ['simd']
 [dependencies.syntect]
 # onig rust fails to build w/o clang currently so pin syntect,
 # see <https://github.com/rust-onig/rust-onig/issues/109> and GH-90
-version = "^3, <3.2"
+version = "4.1.1"
 default-features = false
 features = ["parsing", "assets", "dump-load"]
+
+[workspace]
+members = ["rumatui-tui"]
