--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ either = "1.5.3"
 failure = "0.1.7"
 futures-core = "0.3.4"
 futures-util = "0.3.4"
+http = "0.2.1"
 itertools = "0.9.0"
 js_int = "0.1.5"
 lazy_static = "1.4.0"
