--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,11 @@ itertools = "0.9.0"
 js_int = "0.1.5"
 lazy_static = "1.4.0"
 
-matrix-sdk = "0.1.0"
-matrix-sdk-base = { version = "0.1.0", features = ["messages"] }
+# matrix-sdk = "0.1.0"
+# matrix-sdk-base = { version = "0.1.0", features = ["messages"] }
+
+matrix-sdk = { path = "../__forks__/matrix-rust-sdk/matrix_sdk" }
+matrix-sdk-base = { path = "../__forks__/matrix-rust-sdk/matrix_sdk_base" }
 
 mdcat = "0.18.2"
 muncher = "0.6.0"
