re-impl message edit and reactions using EventEmitter::on_unrecognized_event
fix read_receipt sending (send the correct event_id not a totally random one), split messages up into a map of room_id to message vec.

unify all import path formatting, add comments and TODOs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,11 @@ lazy_static = "1.4.0"
 # matrix-sdk = "0.1.0"
 # matrix-sdk-base = { version = "0.1.0", features = ["messages"] }
 
-matrix-sdk = { path = "../__forks__/matrix-rust-sdk/matrix_sdk" }
-matrix-sdk-base = { path = "../__forks__/matrix-rust-sdk/matrix_sdk_base" }
+# matrix-sdk = { path = "../__forks__/matrix-rust-sdk/matrix_sdk" }
+# matrix-sdk-base = { path = "../__forks__/matrix-rust-sdk/matrix_sdk_base" }
+
+matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk", branch = "rumatui" }
+# matrix-sdk-base = { git = "https://github.com/matrix-org/matrix-rust-sdk/matrix_sdk_base" }
 
 mdcat = "0.18.2"
 muncher = "0.6.0"
