--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,15 +43,19 @@ ruma-client-api = "0.9.0"
 serde = { version = "1.0.111", features = ["derive"] }
 serde_json = "1.0.52"
 termion = "1.5.5"
-tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "sync"] }
+tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "sync", "process"] }
 
 # crates.io published fork of tui
 rumatui-tui = "0.8.0"
 
+webbrowser = "0.5.2"
 unicode-width = "0.1.7"
 unicode-segmentation = "1.6.0"
 url = "2.1.1"
 uuid = { version = "0.8.1", features = ["v4"] }
+
+http = "0.2.1"
+reqwest = "0.10.4"
 
 [dependencies.pulldown-cmark]
 version = "^0.7"
