--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,6 @@ comrak = "0.7.0"
 crossbeam-channel = "0.4.2"
 dirs = "2.0.2"
 failure = "0.1.7"
-http = "0.2.1"
 itertools = "0.9.0"
 js_int = "0.1.5"
 lazy_static = "1.4.0"
@@ -39,6 +38,7 @@ regex = "1.3.9"
 # turn on rand feature to generate EventId's
 ruma-identifiers = { version = "0.16.1", features = ["rand"] }
 ruma-client-api = "0.9.0"
+ruma-api = "0.16.1"
 
 serde = { version = "1.0.111", features = ["derive"] }
 serde_json = "1.0.52"
@@ -49,12 +49,8 @@ tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "sync", "proc
 rumatui-tui = "0.8.0"
 
 webbrowser = "0.5.2"
-unicode-width = "0.1.7"
-unicode-segmentation = "1.6.0"
 url = "2.1.1"
 uuid = { version = "0.8.1", features = ["v4"] }
-
-reqwest = "0.10.4"
 
 [dependencies.pulldown-cmark]
 version = "^0.7"
