--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ lazy_static = "1.4.0"
 # matrix-sdk-base = { path = "../__forks__/matrix-rust-sdk/matrix_sdk_base" }
 
 matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk", branch = "rumatui" }
+# matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk" }
 
 mdcat = "0.18.2"
 muncher = "0.6.1"
