--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,16 +26,17 @@ lazy_static = "1.4.0"
 # matrix-sdk = "0.1.0"
 # matrix-sdk-base = { version = "0.1.0", features = ["messages"] }
 
-matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk", branch = "rumatui" }
+matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk", branch = "ruma22" }
+# matrix-sdk = { path = "../__forks__/matrix-rust-sdk/matrix_sdk" }
 
 mdcat = "0.18.2"
 muncher = "0.6.1"
 regex = "1.3.9"
 
 # turn on rand feature to generate EventId's
-ruma-identifiers = { version = "0.16.1", features = ["rand"] }
-ruma-client-api = "0.9.0"
-ruma-api = "0.16.1"
+# ruma-identifiers = { version = "0.16.1", features = ["rand"] }
+# ruma-client-api = "0.9.0"
+# ruma-api = "0.16.1"
 
 serde = { version = "1.0.111", features = ["derive"] }
 serde_json = "1.0.52"
