--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,8 @@ lazy_static = "1.4.0"
 # matrix-sdk = "0.1.0"
 # matrix-sdk-base = { version = "0.1.0", features = ["messages"] }
 
-matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk", branch = "ruma22" }
-# matrix-sdk = { path = "../__forks__/matrix-rust-sdk/matrix_sdk" }
+# matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk", branch = "ruma22" }
+matrix-sdk = { path = "../__forks__/matrix-rust-sdk/matrix_sdk" }
 
 mdcat = "0.18.2"
 muncher = "0.6.1"
