--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,10 +26,11 @@ lazy_static = "1.4.0"
 # matrix-sdk = "0.1.0"
 # matrix-sdk-base = { version = "0.1.0", features = ["messages"] }
 
-# matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk", branch = "ruma22" }
-matrix-sdk = { path = "../__forks__/matrix-rust-sdk/matrix_sdk" }
+matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk", branch = "ruma22" }
+# matrix-sdk = { path = "../__forks__/matrix-rust-sdk/matrix_sdk" }
 
-mdcat = "0.18.2"
+# mdcat = "0.18.2"
+mdcat = { path = "../__forks__/mdcat" }
 muncher = "0.6.1"
 regex = "1.3.9"
 
