--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,10 +34,7 @@ mdcat = { path = "../__forks__/mdcat" }
 muncher = "0.6.1"
 regex = "1.3.9"
 
-# turn on rand feature to generate EventId's
-# ruma-identifiers = { version = "0.16.1", features = ["rand"] }
-# ruma-client-api = "0.9.0"
-# ruma-api = "0.16.1"
+ruma-api = { git = "https://github.com/DevinR528/ruma", branch = "export-ruma_api!" }
 
 serde = { version = "1.0.111", features = ["derive"] }
 serde_json = "1.0.52"
