--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,7 @@ lazy_static = "1.4.0"
 matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk", branch = "ruma22" }
 # matrix-sdk = { path = "../__forks__/matrix-rust-sdk/matrix_sdk" }
 
-# mdcat = "0.18.2"
-mdcat = { path = "../__forks__/mdcat" }
+mdcat = "0.18.2"
 muncher = "0.6.1"
 regex = "1.3.9"
 
