--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,23 +32,22 @@ matrix-sdk = { git = "https://github.com/DevinR528/matrix-rust-sdk", branch = "r
 mdcat = "0.18.2"
 muncher = "0.6.1"
 regex = "1.3.9"
-
-ruma-api = { git = "https://github.com/DevinR528/ruma", branch = "export-ruma_api!" }
+# depend on the same version matrix-sdk depends on
+ruma-api = { git = "https://github.com/DevinR528/ruma", branch = "field-access" }
 
 serde = { version = "1.0.111", features = ["derive"] }
 serde_json = "1.0.52"
 termion = "1.5.5"
 tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "sync"] }
-
 # crates.io published fork of tui
-rumatui-tui = { path = "./rumatui-tui", version = "0.8.1" }
+rumatui-tui = "0.8.1"
 
 webbrowser = "0.5.2"
 url = "2.1.1"
 uuid = { version = "0.8.1", features = ["v4"] }
 
 [dependencies.pulldown-cmark]
-version = "^0.7"
+version = "0.7.1"
 default-features = false
 features = ['simd']
 
