--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,8 @@ serde = { version = "1.0.111", features = ["derive"] }
 serde_json = "1.0.52"
 termion = "1.5.5"
 tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "sync"] }
-
+tracing-subscriber = { version = "0.2.7", features = ["fmt"] }
+tracing = "0.1.5"
 # crates.io published fork of tui
 rumatui-tui = "0.8.1"
 
