--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ serde = { version = "1.0.111", features = ["derive"] }
 serde_json = "1.0.52"
 termion = "1.5.5"
 tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "sync"] }
+tracing-appender = "0.1"
 tracing-subscriber = { version = "0.2.7", features = ["fmt"] }
 tracing = "0.1.5"
 # crates.io published fork of tui
