--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,16 +26,13 @@ lazy_static = "1.4.0"
 # matrix-sdk = "0.1.0"
 # matrix-sdk-base = { version = "0.1.0", features = ["messages"] }
 
-matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "cd9252cc3d9d46770db54a1c6317aa4a52b52cf3" }
+matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "18b444a" }
 
 mdcat = "0.18.2"
 muncher = "0.6.1"
 regex = "1.3.9"
-
-# turn on rand feature to generate EventId's
-ruma-identifiers = { version = "0.16.1", features = ["rand"] }
-ruma-client-api = "0.9.0"
-ruma-api = "0.16.1"
+# depend on the same version matrix-sdk depends on
+ruma-api = { git = "https://github.com/ruma/ruma", rev = "c19bcaab" }
 
 serde = { version = "1.0.111", features = ["derive"] }
 serde_json = "1.0.52"
