--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rumatui"
-version = "0.1.17"
+version = "0.1.18"
 authors = ["Devin R <devin.ragotzy@gmail.com>"]
 license = "MIT/Apache-2.0"
 description = "A click-able command-line Matrix client."
@@ -23,19 +23,14 @@ itertools = "0.9.0"
 js_int = "0.1.5"
 lazy_static = "1.4.0"
 
-# matrix-sdk = "0.1.0"
-# matrix-sdk-base = { version = "0.1.0", features = ["messages"] }
-
-matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "cd9252cc3d9d46770db54a1c6317aa4a52b52cf3" }
+matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "037d62b" }
 
 mdcat = "0.18.2"
 muncher = "0.6.1"
 regex = "1.3.9"
 
-# turn on rand feature to generate EventId's
-ruma-identifiers = { version = "0.16.1", features = ["rand"] }
-ruma-client-api = "0.9.0"
-ruma-api = "0.16.1"
+# depend on the same version matrix-sdk depends on so if matrix-sdk updates this does to
+ruma-api = { git = "https://github.com/ruma/ruma", rev = "848b22568106d05c5444f3fe46070d5aa16e422b" }
 
 serde = { version = "1.0.111", features = ["derive"] }
 serde_json = "1.0.52"
@@ -44,9 +39,9 @@ tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "sync"] }
 tracing-appender = "0.1"
 tracing-subscriber = { version = "0.2.7", features = ["fmt"] }
 tracing = "0.1.5"
+
 # crates.io published fork of tui
 rumatui-tui = "0.8.1"
-
 webbrowser = "0.5.2"
 url = "2.1.1"
 uuid = { version = "0.8.1", features = ["v4"] }
