--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ categories = ["command-line-utilities"]
 edition = "2018"
 readme = "README.md"
 # at some point exclude this ??
-# exclude = ["resources"] 
+# exclude = ["resources"]
 
 [dependencies]
 async-trait = "0.1.30"
@@ -22,6 +22,7 @@ failure = "0.1.7"
 itertools = "0.9.0"
 js_int = "0.1.5"
 lazy_static = "1.4.0"
+sublime_fuzzy = "0.6.0"
 
 matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "037d62b" }
 
