--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,28 +15,30 @@ readme = "README.md"
 [dependencies]
 async-trait = "0.1.30"
 chrono = "0.4"
-comrak = "0.8.2"
-crossbeam-channel = "0.4.2"
+comrak = "0.9.0"
+crossbeam-channel = "0.5.0"
 dirs = "3.0.1"
 failure = "0.1.7"
-itertools = "0.9.0"
-js_int = "0.1.5"
+itertools = "0.10.0"
 lazy_static = "1.4.0"
-sublime_fuzzy = "0.6.0"
+sublime_fuzzy = "0.7.0"
+sled = "0.34.6"
 
-matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "037d62b" }
+# matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "b66c666997cbcf32071d24ffe2484a215de8d0e4" }
+matrix-sdk = { path = "../__forks__/matrix-rust-sdk/matrix_sdk" }
 
 mdcat = "0.21.1"
 muncher = "0.6.1"
 regex = "1.3.9"
 
 # depend on the same version matrix-sdk depends on so if matrix-sdk updates this does to
-ruma-api = { git = "https://github.com/ruma/ruma", rev = "848b22568106d05c5444f3fe46070d5aa16e422b" }
+ruma-api = { git = "https://github.com/ruma/ruma", rev = "8c109d3c0a7ec66b352dc82677d30db7cb0723eb" }
+ruma-serde = { git = "https://github.com/ruma/ruma", rev = "8c109d3c0a7ec66b352dc82677d30db7cb0723eb" }
 
 serde = { version = "1.0.111", features = ["derive"] }
 serde_json = "1.0.52"
 termion = "1.5.5"
-tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "sync"] }
+tokio = { version = "1.1.1", features = ["macros", "rt-multi-thread", "sync"] }
 tracing-appender = "0.1"
 tracing-subscriber = { version = "0.2.7", features = ["fmt"] }
 tracing = "0.1.5"
